--- a/src/Todo-list/todo.css
+++ b/src/Todo-list/todo.css
@@ -1,22 +1,158 @@
-.app{
-    background: #209cee;
-    padding: 30px;
-    height: 100vh;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: "Josefin Sans", "Arial Narrow", Arial, sans-serif;
 }
-.todo-list{
-    background: #e8e8e8;
-    border-radius: 4px;
-    padding: 5px;
-    max-width: 400px;
+::-webkit-scrollbar{
+  width: 0.6vw;
+  height: 0.6vh;
+  transition: all 0.5s;
 }
-.todo{
-    background: #fff;
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
-    padding: 3px 10px;
-    font-size: 12px;
-    margin-bottom: 6px;
-    border-radius: 3px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+::-webkit-scrollbar-thumb{
+  background-color: #FFf;
 }
+::-webkit-scrollbar-thumb:hover{
+  background-color: #999;
+}
+::-webkit-scrollbar-track{
+  background-color: #555;
+}
+::-webkit-scrollbar-track:hover{
+  background-color: rgba(85, 85, 85, 0.096);
+}
+.main_div {
+  width: 100%;
+  height: 100vh;
+  background: #7bed9f;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+ text-align: center;
+ flex-wrap: wrap;
+}
+
+.main_div .center_div {
+  margin: 15px;
+  height: 70vh;
+  background-color: #f4f4f4;
+  box-shadow: 5px 5px 25px -5px rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
+  position: relative;
+}
+.main_div .center_div .toggle{
+  position: absolute;
+  top: 15px;
+  right: 15px;
+}
+.main_div .center_div .darkMode{
+  transition: transform 0.35s ease-in;
+}
+.main_div .center_div .darkMode:focus,
+.main_div .center_div .darkMode:hover{
+  cursor: pointer;
+  transform: rotate(1turn);
+}
+h1 {
+  color: #7bed9f;
+  font-size: 50px;
+  margin-bottom: 30px;
+  min-width: 64px;
+  box-sizing: border-box;
+  font-family: "Comfortaa", cursive;
+  font-weight: 500;
+  border-radius: 4px;
+  letter-spacing: 0.02857em;
+  text-transform: uppercase;
+  text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+}
+.main_div .center_div .form{
+  display: grid;
+  justify-content: space-around;
+  align-items: center;
+  grid-auto-flow: column;
+}
+
+input {
+  text-align: center;
+  width: 100px;
+  height: 30px;
+  border: none;
+  background: transparent;
+  font-size: 20px;
+  font-weight: 500;
+  border-bottom: 2px solid #8566aa;
+  outline: none;
+  transition: all 0.5s ease-in-out;
+}
+input:focus{
+  width: 200px;
+}
+.main_div .center_div .newBtn {
+  width: 40px;
+  height: 25px;
+  background-color: #16a085;
+  color: white;
+  box-shadow: 2px 2px 2px  rgba(0, 0, 0, 0.3);
+  border-radius: 20%;
+  transition: all 0.5s;
+  outline: none;
+  border: none;
+  font-size: 0.8rem;
+}
+.main_div .center_div .newBtn:hover {
+  color: #16a085;
+  background: white;
+}
+
+.main_div .center_div ol {
+  margin: 20px 0 0 0;
+  padding: 0;
+  overflow-y: scroll;
+  height: clamp(200px,50%,240px);
+}
+
+.main_div .center_div .todo_style {
+  display: grid;
+  grid-template-columns: 200px 30px;
+  justify-content: center;
+  align-items: center;
+}
+.main_div .center_div .todo_style li{
+  grid-column: 1/3;
+  grid-column-gap: 10px;
+  font-size: 1.1rem;
+  margin-block: 5px;
+  font-weight: 500;
+  min-height: 20px;
+  color: #8566aa;
+  text-transform: capitalize;
+  text-align: left;
+}
+.main_div .center_div .todo_style .deleteIcon {
+  width: 20px;
+  height: 20px;
+  display: grid;
+  place-items: center;
+  font-size: 0.8rem;
+  background-color: #8566aa;
+  border-radius: 50%;
+  color: aliceblue;
+  box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
+  transition: all 0.4s ease;
+  grid-column: 3/4;
+}
+
+.main_div .center_div .todo_style .deleteIcon:hover {
+  background-color: transparent;
+  color: crimson;
+  box-shadow: 5px 5px 15px -5px rgba(255, 0, 0, 0.5);
+}
+/* .main_div .center_div .todo_style .checkButton{
+  grid-column: 4/6;
+} */
+.todo_style .fa-times:hover .list_style {
+  color: crimson;
+}
+
